# high-performance-gpu-ipc

./: CMakeLists.txt  GPU_IPC_Research_Report.md  README.md
benchmarks/: cuda_ipc_diagnostic.cu  gpu_limits_benchmark.cu  memory_benchmark.cu
docs/: API.md  PERFORMANCE.md  TROUBLESHOOTING.md
examples/01_basic_shared_memory/: README.md  consumer.cu  producer.cu
examples/02_optimized_shared_memory/: README.md  consumer.cu  producer.cu
examples/03_cuda_ipc_sleep/: README.md  consumer.cu  producer.cu
examples/04_cuda_ipc_spinwait/: README.md  consumer.cu  producer.cu
include/: common.h  helper_cuda.h  helper_multiprocess.h
